[gd_scene load_steps=9 format=3 uid="uid://bghfio8fj7lup"]

[ext_resource type="Texture2D" uid="uid://csdaiff5itfkm" path="res://Assets/textures/button1.png" id="1_cyy1h"]
[ext_resource type="Script" uid="uid://dpedes158so43" path="res://Characters/NPCS/boss2/final_boss_fight.gd" id="1_irug3"]
[ext_resource type="FontFile" uid="uid://dbl3favhv00sj" path="res://Battle/ui_elements/handwritefont.ttf" id="2_gcirq"]
[ext_resource type="Texture2D" uid="uid://ckj0p5n8fvafk" path="res://Assets/Spritesheets/fb_player.png" id="3_gcirq"]
[ext_resource type="Script" uid="uid://bhsj2fha6f3gp" path="res://Characters/NPCS/boss2/fb_player.gd" id="4_2okqu"]
[ext_resource type="Texture2D" uid="uid://efn34orlhh3y" path="res://Assets/textures/fb_fight_border.png" id="6_2okqu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1wnwb"]
size = Vector2(232, 79)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irug3"]
size = Vector2(32, 32)

[node name="Final_boss_fight" type="Node2D" node_paths=PackedStringArray("button_markers")]
position = Vector2(0, 1)
script = ExtResource("1_irug3")
button_markers = [NodePath("Area_markers/m1"), NodePath("Area_markers/m2"), NodePath("Area_markers/m3"), NodePath("Area_markers/m4"), NodePath("Area_markers/m5")]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(528, 264)

[node name="TextureRect" type="TextureRect" parent="Area2D"]
offset_left = -84.0
offset_top = -39.0
offset_right = 150.0
offset_bottom = 40.0
texture = ExtResource("1_cyy1h")
expand_mode = 2

[node name="Label" type="Label" parent="Area2D"]
offset_left = -45.0
offset_top = -15.0
offset_right = 115.0
offset_bottom = 13.0
theme_override_fonts/font = ExtResource("2_gcirq")
theme_override_font_sizes/font_size = 28
text = "SUPROTSTAVI SE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(33, 0)
shape = SubResource("RectangleShape2D_1wnwb")

[node name="fb_player" type="CharacterBody2D" parent="."]
position = Vector2(269, 271)
script = ExtResource("4_2okqu")

[node name="Sprite2D" type="Sprite2D" parent="fb_player"]
scale = Vector2(4, 4)
texture = ExtResource("3_gcirq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="fb_player"]
shape = SubResource("RectangleShape2D_irug3")

[node name="Area_markers" type="Node" parent="."]

[node name="m1" type="Marker2D" parent="Area_markers"]
position = Vector2(265, 513)

[node name="m2" type="Marker2D" parent="Area_markers"]
position = Vector2(854, 423)

[node name="m3" type="Marker2D" parent="Area_markers"]
position = Vector2(688, 96)

[node name="m4" type="Marker2D" parent="Area_markers"]
position = Vector2(197, 112)

[node name="m5" type="Marker2D" parent="Area_markers"]
position = Vector2(524, 356)

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_2okqu")
expand_mode = 2

[node name="Fearbar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 506.5
offset_top = -32.0
offset_right = 645.5
offset_bottom = -5.0
grow_horizontal = 2
value = 50.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
